# LARPServer

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindSQLite3.cmake
sources/: #index.html#  LARPstyle.css  do_stuff.js  index.html  lite_db.cpp  lite_db.hpp  main.cpp
web/: LARPstyle.css  data.JSON  do_stuff.js  index.html
